# circuitpy-leds

./: .gitignore  AGENTS.md  README.md  install.py  main.py  pyproject.toml  requirements_cpy.txt  sonar-project.properties
.github/workflows/: build.yml
circuitpy_leds/: __init__.py  config.py  mqtt.py  wifi.py
circuitpy_leds/circuitpy/: mqtt.py  wifi.py
circuitpy_leds/cli/: main.py
circuitpy_leds/control/: __init__.py  async_mqtt.py  mqtt.py  tcp.py  touch.py
circuitpy_leds/driver/: apa102.py
circuitpy_leds/hw/: __init__.py
circuitpy_leds/shows/: __init__.py  christmas.py  color_ranges.py  color_run.py  jump.py  morse_code.py  rainbow.py  solid.py  starlight.py  theater_chase.py  two_color_blend.py  wave.py
circuitpy_leds/support/: __init__.py  blend.py  color.py  layout.py
examples/: 01_basic_rainbow.py  02_switching_shows.py  03_layout_mirror.py  04_color_ranges_flag.py  README.md
tests/: conftest.py
tests/control/: test_async_mqtt.py
tests/shows/: conftest.py  test_color_ranges.py  test_morse_code.py  test_rainbow.py  test_solid.py
tests/support/: test_blend.py  test_layout.py
