[project]
name = "circuitpy-leds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "adafruit-circuitpython-neopixel>=6.3.18",
    "paho-mqtt>=2.1.0",
    "spidev>=3.8",
]

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.uv.build-backend]
module-root = ""

[project.scripts]
leds = "circuitpy_leds.cli.main:main"

[dependency-groups]
dev = [
    "circup>=2.3.0",
    "mock>=5.2.0",
    "pytest>=8.4.2",
    "pytest-cover>=3.0.0",
    "setuptools>=80.9.0",
]
