[project]
name = "circuitpy-leds"
version = "0.1.0"
description = "Control LED strips using CircuitPython with async show effects, MQTT/touch control, and flexible layout management"
readme = "README.md"
requires-python = ">=3.14"
license = {file = "LICENSE"}
keywords = ["circuitpython", "led", "neopixel", "apa102", "rgb", "lighting", "effects", "mqtt", "iot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Hardware",
    "Topic :: Home Automation",
]
dependencies = [
    "adafruit-circuitpython-neopixel>=6.3.18",
    "paho-mqtt>=2.1.0",
    "rpi-gpio>=0.7.1; sys_platform == 'linux'",
    "spidev>=3.8; sys_platform == 'linux'",
]

[project.urls]
Homepage = "https://github.com/oetztal/circuitpy-leds"
Repository = "https://github.com/oetztal/circuitpy-leds"
Issues = "https://github.com/oetztal/circuitpy-leds/issues"

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.uv.build-backend]
module-root = ""

[project.scripts]
leds = "circuitpy_leds.cli.main:main"

[dependency-groups]
dev = [
    "circup>=2.3.0",
    "mock>=5.2.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cover>=3.0.0",
    "setuptools>=80.9.0",
]
